k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harmony-smp
  labels:
    name: harmony-smp
    app: harmony-smp
